more responsive success cards

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,7 @@
     <title>Fullstack Piggy Bank</title>
   </head>
   <body>
-    <style>
+    <!-- <style>
       .nav-link:hover {
         background-color: #b1dae7;
       }
@@ -45,7 +45,6 @@
 
       .card > ul {
         margin-bottom: .6%;
-        
       }
 
       label {
@@ -63,7 +62,7 @@
         font-size: '2.2rem';
       }
 
-    </style>
+    </style> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
